@@ -11,3 +11,4 @@ dev_poll_accelerometer = /tmp/fakedsensors/accelerometer_poll_rate
 
 # Dynamically created dataset, don't use offset.
 orientation_offset = 0
+orientation_buffer_size = 1
